# shm24

./: README.md
ComplexVer/: Complex.cpp  Complex.h
ComplexVer/test/: Complex_test.cpp  main_test.cpp
VisualHull/: CMakeLists.txt  Camera.cpp  Camera.h  Imagen.cpp  Imagen.h  Voxel.cpp  Voxel.h  config.h
VisualHull/CImg/: README.txt
VisualHull/Cam00/: seq000000.txt  seq000010.txt  seq000020.txt  seq000030.txt  seq000040.txt  seq000050.txt  seq000060.txt  seq000070.txt  seq000080.txt  seq000090.txt  seq000100.txt  seq000110.txt  seq000120.txt  seq000130.txt  seq000140.txt  seq000150.txt  seq000160.txt  seq000170.txt  seq000180.txt  seq000190.txt  seq000200.txt  seq000210.txt  seq000220.txt  seq000230.txt  seq000240.txt  seq000250.txt  seq000260.txt  seq000270.txt  seq000280.txt  seq000290.txt  seq000300.txt  seq000310.txt  seq000320.txt  seq000330.txt  seq000340.txt  seq000350.txt  seq000360.txt  seq000370.txt  seq000380.txt  seq000390.txt  (+18 more)
VisualHull/Cam01/: seq000000.txt  seq000010.txt  seq000020.txt  seq000030.txt  seq000040.txt  seq000050.txt  seq000060.txt  seq000070.txt  seq000080.txt  seq000090.txt  seq000100.txt  seq000110.txt  seq000120.txt  seq000130.txt  seq000140.txt  seq000150.txt  seq000160.txt  seq000170.txt  seq000180.txt  seq000190.txt  seq000200.txt  seq000210.txt  seq000220.txt  (+35 more)
ejemplo/: main.c
matmult/: matmult.cpp  matmult.hpp  matrix_lib.cpp  matrix_lib.hpp
pi/: pi.c
rotate_openCL_student/: CMakeLists.txt  bmpfuncs.h  hostcode.cpp  rotate.cpp
test1/: main.c
test_clase/: main.c
test_openCL/: test_openCL.cpp
test_openMP/: main.c
(+71 files in other folders)
